<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/messageBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mapboxBlue"
            android:padding="5dp"
            android:text="@string/start_selecting_label"
            android:textAlignment="center"
            android:textColor="#FFF" />

        <Button
            android:id="@+id/startOverBtn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/mapboxWhite"
            android:drawableLeft="@drawable/ic_start_over"
            android:foreground="@drawable/riipleeffectbuttons"
            android:gravity="right"
            android:paddingHorizontal="10dp"
            android:paddingTop="8dp"
            android:paddingBottom="5dp"
            android:text="@string/start_over"
            android:textAllCaps="false"
            android:textColor="@color/mapboxBlack" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/combinePlotBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="-7dp"
            android:backgroundTint="@color/mapboxBlue"
            android:foreground="@drawable/riipleeffectbuttons"
            android:text="@string/next"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000" />
    </LinearLayout>
</RelativeLayout>
